# Your_Voice

./: .gitignore  QUICK_START.md  README.md  SETUP.md  env.example  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/components/: TranscriptionDisplay.css  TranscriptionDisplay.tsx  VoiceRecorder.css  VoiceRecorder.tsx
src/services/: audioCapture.ts  deepgramService.ts
